--- a/src/main/resources/fxmlFile/fxmlSocket.fxml
+++ b/src/main/resources/fxmlFile/fxmlSocket.fxml
@@ -5,9 +5,37 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.GUIController">
+<AnchorPane fx:id="rootSocket" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.GUIController">
   <children>
-    <Label layoutX="286.0" layoutY="192.0" text="Socket" />
+    <VBox fx:id="vboxSocket" alignment="TOP_LEFT" layoutX="170.0" layoutY="133.0" prefHeight="-1.0" prefWidth="261.0" spacing="25.0">
+      <children>
+        <Label text="Inserire parametri:">
+          <font>
+            <Font size="14.0" />
+          </font>
+        </Label>
+        <GridPane fx:id="gridPaneSocket" alignment="TOP_CENTER" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Label fx:id="labelIPSocket" text="IP server:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Label fx:id="labelPortaSocket" text="Porta server:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Label fx:id="labelNickSocket" text="Nickname giocatore:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <TextArea fx:id="textIPSocket" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <TextArea fx:id="textPortaSocket" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextArea fx:id="textNickSocket" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+          </children>
+          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="10.0" prefWidth="50.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="10.0" prefWidth="50.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+        </GridPane>
+      </children>
+    </VBox>
   </children>
 </AnchorPane>
