--- a/src/main/resources/fxmlFile/fxmlRMI.fxml
+++ b/src/main/resources/fxmlFile/fxmlRMI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="rootRMI" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.GUIController">
+<AnchorPane fx:id="rootRMI" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGUIRMI">
   <children>
     <Label layoutX="286.0" layoutY="184.0" text="RMI" />
   </children>
