--- a/src/main/resources/fxmlFile/fxmlSocket.fxml
+++ b/src/main/resources/fxmlFile/fxmlSocket.fxml
@@ -2,40 +2,64 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="rootSocket" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.GUIController">
+<AnchorPane id="rootSocket" fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGUISocket">
   <children>
-    <VBox fx:id="vboxSocket" alignment="TOP_LEFT" layoutX="170.0" layoutY="133.0" prefHeight="-1.0" prefWidth="261.0" spacing="25.0">
-      <children>
-        <Label text="Inserire parametri:">
+    <BorderPane id="boarderpaneSocket" fx:id="borderpaneSocket" layoutX="14.0" layoutY="14.0" prefHeight="-1.0" prefWidth="-1.0">
+      <bottom>
+        <HBox alignment="BOTTOM_RIGHT" prefHeight="65.0" prefWidth="476.0" spacing="20.0">
+          <children>
+            <Button fx:id="buttonIndietroSocket" mnemonicParsing="false" onAction="#handleButtonIndietroSocket" text="Indietro" />
+            <Button fx:id="buttonAvantiSocket" mnemonicParsing="false" onAction="#handleButtonAvantiSocket" text="Avanti" />
+          </children>
+        </HBox>
+      </bottom>
+      <center>
+        <VBox fx:id="vboxSocket" alignment="TOP_LEFT" prefHeight="244.0" prefWidth="476.0" spacing="25.0" BorderPane.alignment="TOP_LEFT">
+          <children>
+            <Separator prefWidth="200.0" />
+            <Label text="Inserire parametri:">
+              <font>
+                <Font size="16.0" />
+              </font>
+            </Label>
+            <GridPane fx:id="gridPaneSocket" alignment="TOP_CENTER" maxWidth="-1.0" prefHeight="153.00009999999747" prefWidth="362.0">
+              <children>
+                <Label fx:id="labelIPSocket" prefHeight="68.0" text="IP server:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label fx:id="labelPortaSocket" text="Porta server:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label fx:id="labelNickSocket" text="Nickname giocatore:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+              </children>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-1.0" minWidth="-1.0" prefWidth="-1.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-1.0" minWidth="-1.0" prefWidth="-1.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="77.0" prefHeight="49.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="78.0" prefHeight="56.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="51.0" prefHeight="49.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+          </children>
+        </VBox>
+      </center>
+      <padding>
+        <Insets />
+      </padding>
+      <top>
+        <Label prefHeight="49.0" prefWidth="109.0" text="Socket" BorderPane.alignment="TOP_LEFT">
           <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="18.0" />
           </font>
         </Label>
-        <GridPane fx:id="gridPaneSocket" alignment="TOP_CENTER" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label fx:id="labelIPSocket" text="IP server:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Label fx:id="labelPortaSocket" text="Porta server:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <Label fx:id="labelNickSocket" text="Nickname giocatore:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <TextArea fx:id="textIPSocket" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <TextArea fx:id="textPortaSocket" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextArea fx:id="textNickSocket" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-          </children>
-          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="10.0" prefWidth="50.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="10.0" prefWidth="50.0" />
-          </columnConstraints>
-          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          </rowConstraints>
-        </GridPane>
-      </children>
-    </VBox>
+      </top>
+    </BorderPane>
   </children>
 </AnchorPane>
