--- a/src/main/resources/fxmlFile/fxmlGame.fxml
+++ b/src/main/resources/fxmlFile/fxmlGame.fxml
@@ -2,23 +2,24 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="root" prefHeight="665.0" prefWidth="869.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGame">
+<AnchorPane fx:id="root" minHeight="500.0" minWidth="800.0" prefHeight="665.0" prefWidth="869.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGame">
   <children>
-    <BorderPane fx:id="borderPaneGame" layoutX="14.0" layoutY="14.0" minHeight="585.9998779296875" prefHeight="637.0" prefWidth="841.0">
+    <BorderPane id="borderPaneGame" fx:id="borderPane" layoutX="14.0" layoutY="14.0" minHeight="585.9998779296875" prefHeight="637.0" prefWidth="841.0">
       <bottom>
-        <HBox prefHeight="100.0" prefWidth="200.0" />
+        <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" />
       </bottom>
       <center>
-        <GridPane snapToPixel="true">
+        <GridPane id="gridPaneGame" fx:id="gridPane" prefHeight="406.0" prefWidth="404.0" snapToPixel="true">
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           </columnConstraints>
@@ -30,8 +31,11 @@
           </rowConstraints>
         </GridPane>
       </center>
+      <left>
+        <Region fx:id="regionLeft" prefHeight="437.0" prefWidth="116.0" />
+      </left>
       <right>
-        <FlowPane prefHeight="600.0" prefWidth="244.0">
+        <FlowPane fx:id="flowPane" prefHeight="600.0" prefWidth="244.0">
           <children>
             <ImageView fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
@@ -41,8 +45,11 @@
         </FlowPane>
       </right>
       <top>
-        <Region prefHeight="100.0" prefWidth="100.0" />
+        <Region fx:id="regionTop" minHeight="20.0" prefHeight="100.0" />
       </top>
     </BorderPane>
   </children>
+  <padding>
+    <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+  </padding>
 </AnchorPane>
