--- a/src/main/resources/fxmlFile/fxmlGame.fxml
+++ b/src/main/resources/fxmlFile/fxmlGame.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane fx:id="root" minHeight="500.0" minWidth="800.0" prefHeight="665.0" prefWidth="869.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGame">
   <children>
-    <BorderPane id="borderPaneGame" fx:id="borderPane" layoutX="14.0" layoutY="14.0" minHeight="585.9998779296875" prefHeight="637.0" prefWidth="841.0">
+    <BorderPane id="borderPaneGame" fx:id="borderPane" minHeight="585.9998779296875" prefHeight="637.0" prefWidth="841.0000999999975" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
       <bottom>
         <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" />
       </bottom>
@@ -50,6 +50,6 @@
     </BorderPane>
   </children>
   <padding>
-    <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+    <Insets />
   </padding>
 </AnchorPane>
