--- a/src/main/resources/fxmlFile/fxmlGame.fxml
+++ b/src/main/resources/fxmlFile/fxmlGame.fxml
@@ -8,34 +8,34 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="root" minHeight="500.0" minWidth="800.0" prefHeight="665.0" prefWidth="869.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGame">
+<AnchorPane fx:id="root" minHeight="600.0" minWidth="800.0" prefHeight="665.0" prefWidth="869.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerGame">
   <children>
-    <BorderPane id="borderPaneGame" fx:id="borderPane" minHeight="585.9998779296875" prefHeight="637.0" prefWidth="841.0000999999975" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+    <BorderPane id="borderPaneGame" fx:id="borderPane" minHeight="-1.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
       <bottom>
         <HBox fx:id="hbox" prefHeight="100.0" prefWidth="200.0" />
       </bottom>
       <center>
-        <GridPane id="gridPaneGame" fx:id="gridPane" prefHeight="406.0" prefWidth="404.0" snapToPixel="true">
+        <GridPane id="gridPaneGame" fx:id="gridPane" maxHeight="-Infinity" maxWidth="600.0" minHeight="300.0" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" snapToPixel="true" BorderPane.alignment="CENTER">
           <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
           </columnConstraints>
           <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="170.0" minHeight="-Infinity" prefHeight="-1.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="170.0" minHeight="-Infinity" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="170.0" minHeight="-Infinity" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="170.0" minHeight="-Infinity" percentHeight="-1.0" vgrow="SOMETIMES" />
           </rowConstraints>
         </GridPane>
       </center>
       <left>
-        <Region fx:id="regionLeft" prefHeight="437.0" prefWidth="116.0" />
+        <Region fx:id="regionLeft" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="60.0" />
       </left>
       <right>
-        <FlowPane fx:id="flowPane" prefHeight="600.0" prefWidth="244.0">
+        <FlowPane fx:id="flowPane" maxHeight="+Infinity" maxWidth="+Infinity" minHeight="300.0" minWidth="150.0" prefHeight="300.0" prefWidth="350.0">
           <children>
             <ImageView fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fitHeight="200.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" />
@@ -44,9 +44,6 @@
           </children>
         </FlowPane>
       </right>
-      <top>
-        <Region fx:id="regionTop" minHeight="20.0" prefHeight="100.0" />
-      </top>
     </BorderPane>
   </children>
   <padding>
