--- a/src/main/resources/fxmlFile/fxmlGame.fxml
+++ b/src/main/resources/fxmlFile/fxmlGame.fxml
@@ -16,6 +16,28 @@
       </bottom>
       <center>
         <GridPane id="gridPaneGame" fx:id="gridPane" maxHeight="-Infinity" maxWidth="600.0" minHeight="300.0" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" snapToPixel="true" BorderPane.alignment="CENTER">
+          <children>
+            <Pane fx:id="pane00" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Pane fx:id="pane01" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <Pane fx:id="pane02" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <Pane fx:id="pane03" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+            <Pane fx:id="pane04" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+            <Pane fx:id="pane10" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Pane fx:id="pane11" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Pane fx:id="pane12" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Pane fx:id="pane13" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Pane fx:id="pane14" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Pane fx:id="pane20" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <Pane fx:id="pane21" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Pane fx:id="pane22" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Pane fx:id="pane23" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <Pane fx:id="pane24" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Pane fx:id="pane30" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+            <Pane fx:id="pane32" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Pane fx:id="pane33" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Pane fx:id="pane34" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <Pane fx:id="pane31" prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+          </children>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="70.0" prefWidth="100.0" />
