Modificata cli, risolti problemi carte tool

--- a/doc/it/polimi/se2018/View/CLI.html
+++ b/doc/it/polimi/se2018/View/CLI.html
@@ -49,7 +49,7 @@ var activeTableTab = "activeTableTab";
 <div class="subNav">
 <ul class="navList">
 <li>Prev&nbsp;Class</li>
-<li><a href="../../../../it/polimi/se2018/View/ControllerGUI.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/ControllerGUI.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/CLI.html" target="_top">Frames</a></li>
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">it.polimi.se2018.View</div>
+<div class="subTitle">it.polimi.se2018.view</div>
 <h2 title="Class CLI" class="title">Class CLI</h2>
 </div>
 <div class="contentContainer">
@@ -102,10 +102,10 @@ var activeTableTab = "activeTableTab";
 <li>java.util.Observable</li>
 <li>
 <ul class="inheritance">
-<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View">it.polimi.se2018.View.View</a></li>
+<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view">it.polimi.se2018.view.View</a></li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.View.CLI</li>
+<li>it.polimi.se2018.view.CLI</li>
 </ul>
 </li>
 </ul>
@@ -123,7 +123,7 @@ var activeTableTab = "activeTableTab";
 <hr>
 <br>
 <pre>public class <span class="typeNameLabel">CLI</span>
-extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View">View</a></pre>
+extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view">View</a></pre>
 <div class="block">Command Line Interface</div>
 <dl>
 <dt><span class="simpleTagLabel">Author:</span></dt>
@@ -574,7 +574,7 @@ extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it
 <div class="block">Called when the connection is closed</div>
 <dl>
 <dt><span class="overrideSpecifyLabel">Specified by:</span></dt>
-<dd><code><a href="../../../../it/polimi/se2018/View/View.html#connectionClosed--">connectionClosed</a></code>&nbsp;in class&nbsp;<code><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View">View</a></code></dd>
+<dd><code><a href="../../../../it/polimi/se2018/View/View.html#connectionClosed--">connectionClosed</a></code>&nbsp;in class&nbsp;<code><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view">View</a></code></dd>
 </dl>
 </li>
 </ul>
@@ -620,7 +620,7 @@ extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it
 <div class="subNav">
 <ul class="navList">
 <li>Prev&nbsp;Class</li>
-<li><a href="../../../../it/polimi/se2018/View/ControllerGUI.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/ControllerGUI.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/CLI.html" target="_top">Frames</a></li>
