--- a/doc/it/polimi/se2018/View/View.html
+++ b/doc/it/polimi/se2018/View/View.html
@@ -48,7 +48,7 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
 <li>Next&nbsp;Class</li>
 </ul>
 <ul class="navList">
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">it.polimi.se2018.View</div>
+<div class="subTitle">it.polimi.se2018.view</div>
 <h2 title="Class View" class="title">Class View</h2>
 </div>
 <div class="contentContainer">
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li>java.util.Observable</li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.View.View</li>
+<li>it.polimi.se2018.view.View</li>
 </ul>
 </li>
 </ul>
@@ -117,7 +117,7 @@ var activeTableTab = "activeTableTab";
 </dl>
 <dl>
 <dt>Direct Known Subclasses:</dt>
-<dd><a href="../../../../it/polimi/se2018/View/CLI.html" title="class in it.polimi.se2018.View">CLI</a>, <a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.View">GUIProxy</a>, <a href="../../../../it/polimi/se2018/controller/RemoteView.html" title="class in it.polimi.se2018.controller">RemoteView</a></dd>
+<dd><a href="../../../../it/polimi/se2018/View/CLI.html" title="class in it.polimi.se2018.view">CLI</a>, <a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.view">GUIProxy</a>, <a href="../../../../it/polimi/se2018/controller/RemoteView.html" title="class in it.polimi.se2018.controller">RemoteView</a></dd>
 </dl>
 <hr>
 <br>
@@ -256,7 +256,7 @@ implements java.util.Observer</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
 <li>Next&nbsp;Class</li>
 </ul>
 <ul class="navList">
