--- a/doc/it/polimi/se2018/View/ControllerWaiting.html
+++ b/doc/it/polimi/se2018/View/ControllerWaiting.html
@@ -48,8 +48,8 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/ControllerGUISocket.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/ControllerGUISocket.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/ControllerWaiting.html" target="_top">Frames</a></li>
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">it.polimi.se2018.View</div>
+<div class="subTitle">it.polimi.se2018.view</div>
 <h2 title="Class ControllerWaiting" class="title">Class ControllerWaiting</h2>
 </div>
 <div class="contentContainer">
@@ -99,7 +99,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.View.ControllerWaiting</li>
+<li>it.polimi.se2018.view.ControllerWaiting</li>
 </ul>
 </li>
 </ul>
@@ -240,8 +240,8 @@ implements javafx.fxml.Initializable</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/ControllerGUISocket.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/ControllerGUISocket.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/ControllerWaiting.html" target="_top">Frames</a></li>
