--- a/doc/it/polimi/se2018/View/GUI.html
+++ b/doc/it/polimi/se2018/View/GUI.html
@@ -48,8 +48,8 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/ControllerWaiting.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/ControllerWaiting.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/GUI.html" target="_top">Frames</a></li>
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">it.polimi.se2018.View</div>
+<div class="subTitle">it.polimi.se2018.view</div>
 <h2 title="Class GUI" class="title">Class GUI</h2>
 </div>
 <div class="contentContainer">
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li>javafx.application.Application</li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.View.GUI</li>
+<li>it.polimi.se2018.view.GUI</li>
 </ul>
 </li>
 </ul>
@@ -280,8 +280,8 @@ extends javafx.application.Application</pre>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/ControllerWaiting.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/ControllerWaiting.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUIProxy.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/GUI.html" target="_top">Frames</a></li>
