--- a/doc/it/polimi/se2018/View/GUIProxy.html
+++ b/doc/it/polimi/se2018/View/GUIProxy.html
@@ -48,8 +48,8 @@ var activeTableTab = "activeTableTab";
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/GUIProxy.html" target="_top">Frames</a></li>
@@ -91,7 +91,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">it.polimi.se2018.View</div>
+<div class="subTitle">it.polimi.se2018.view</div>
 <h2 title="Class GUIProxy" class="title">Class GUIProxy</h2>
 </div>
 <div class="contentContainer">
@@ -102,10 +102,10 @@ var activeTableTab = "activeTableTab";
 <li>java.util.Observable</li>
 <li>
 <ul class="inheritance">
-<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View">it.polimi.se2018.View.View</a></li>
+<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view">it.polimi.se2018.view.View</a></li>
 <li>
 <ul class="inheritance">
-<li>it.polimi.se2018.View.GUIProxy</li>
+<li>it.polimi.se2018.view.GUIProxy</li>
 </ul>
 </li>
 </ul>
@@ -123,7 +123,7 @@ var activeTableTab = "activeTableTab";
 <hr>
 <br>
 <pre>public class <span class="typeNameLabel">GUIProxy</span>
-extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View">View</a></pre>
+extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view">View</a></pre>
 <dl>
 <dt><span class="simpleTagLabel">Author:</span></dt>
 <dd>Matteo</dd>
@@ -246,7 +246,7 @@ extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it
 <div class="block">Notifica il giocatore che la connessione e' stata chiusa</div>
 <dl>
 <dt><span class="overrideSpecifyLabel">Specified by:</span></dt>
-<dd><code><a href="../../../../it/polimi/se2018/View/View.html#connectionClosed--">connectionClosed</a></code>&nbsp;in class&nbsp;<code><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View">View</a></code></dd>
+<dd><code><a href="../../../../it/polimi/se2018/View/View.html#connectionClosed--">connectionClosed</a></code>&nbsp;in class&nbsp;<code><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view">View</a></code></dd>
 </dl>
 </li>
 </ul>
@@ -277,8 +277,8 @@ extends <a href="../../../../it/polimi/se2018/View/View.html" title="class in it
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
-<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.View"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/GUI.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Prev&nbsp;Class</span></a></li>
+<li><a href="../../../../it/polimi/se2018/View/View.html" title="class in it.polimi.se2018.view"><span class="typeNameLink">Next&nbsp;Class</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../../../index.html?it/polimi/se2018/View/GUIProxy.html" target="_top">Frames</a></li>
