--- a/src/main/resources/fxmlFile/fxmlWaiting.fxml
+++ b/src/main/resources/fxmlFile/fxmlWaiting.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.View.ControllerWaiting">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polimi.se2018.view.ControllerWaiting">
   <children>
     <VBox fx:id="vboxWaiting" alignment="CENTER" layoutX="14.0" layoutY="21.0" prefHeight="365.0" prefWidth="572.0" spacing="50.0">
       <children>
